syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstQualityUpgradeRateTableItemExProtobuf";

message	ConstQualityUpgradeRateTableItemEx  {
	optional	uint32	id = 1;
	optional	uint32	quality = 2;
	optional	string	desc = 3;
	optional	string	up = 4;
}